# HAL

./: .gitignore  .gitmodules  Avionics_HAL.h  CMakeLists.txt  CONTRIBUTING.md  Chrono.h  DebugLights.cpp  DebugLights.h  GPS.cpp  GPS.h  HAL_DOCUMENTATION.md  PINS.h  README.md  RFM95Radio.cpp  RFM95Radio.h  RYLR998Radio.cpp  RYLR998Radio.h  Sensor.cpp  Sensor.h  SensorAccelGyro.cpp  SensorAccelGyro.h  SensorBMP280.cpp  SensorBMP280.h  SensorMagnetometer.cpp  SensorMagnetometer.h  SensorTemp.cpp  SensorTemp.h  Storage.h  StorageDesign.md  TelemetryRadio.h  WorkQueue.h  library.json  types.h
abstractions/: IAccelGyroSensor.h  IBmp280Sensor.h  IGpsSensor.h  IMagnetometerSensor.h  ISensor.h  IStorage.h  ITelemetryRadio.h  ITemperatureSensor.h  README.md  WorkQueue.h
implementations/: README.md
implementations/arduino/: ArduinoAccelGyroSensor.cpp  ArduinoAccelGyroSensor.h  ArduinoBmp280Sensor.cpp  ArduinoBmp280Sensor.h  ArduinoDebugLights.cpp  ArduinoDebugLights.h  ArduinoGpsSensor.cpp  ArduinoGpsSensor.h  ArduinoMagnetometerSensor.cpp  ArduinoMagnetometerSensor.h  ArduinoRFM95Radio.cpp  ArduinoRFM95Radio.h  ArduinoRYLR998Radio.cpp  ArduinoRYLR998Radio.h  ArduinoSDFile.h  ArduinoSDFileSystem.h  ArduinoTemperatureSensor.cpp  ArduinoTemperatureSensor.h  ArduinoWorkQueue.cpp  CMakeLists.txt
implementations/mock/: CMakeLists.txt  MockAccelGyroSensor.h  MockBmp280Sensor.h  MockFile.cpp  MockFile.h  MockFileSystem.cpp  MockFileSystem.h  MockGpsSensor.h  MockMagnetometerSensor.h  MockTemperatureSensor.h  MockWorkQueue.cpp
mocks/: MockAccelGyroSensor.h  MockBmp280Sensor.h  MockGpsSensor.h  MockMagnetometerSensor.h  MockTemperatureSensor.h  README.md
test/: CMakeLists.txt  TestWorkQueue.cpp
